# ankijapanesecardcreator-rs

./: Cargo.toml  README.MD
src/: ankiconnect.rs  data_sources.rs  main.rs
src/data_sources/: jisho.rs  kanjiapi.rs
