[package]
name = "ankijapanesecardcreator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
eframe = "0.23.0"
egui = "0.23.0"
egui-winit = "0.23.0"
egui_extras = { version = "*", features = ["all_loaders", "svg", "image"] }
futures = "0.3.30"
image = { version = "0.24", features = ["jpeg", "png", "bmp"] }
regex = "1.10.2"

reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["net", "rt-multi-thread"] }
